simple/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argodemo-svc
  namespace: default
  labels:
    app: argodemo
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: argodemo
  type: NodePort
